--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,259 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+* {
+  font-family: 'Roboto', sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
+html {
+  width: 100%;
   overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100vw !important;
 }
 
-* {
-  box-sizing: border-box;
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 3px solid #f1f1f1;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+*:focus {
+  outline: none !important;
+}
+
+input::placeholder, textarea::placeholder {
+  font-family: "Roboto", sans-serif;
+}
+
+input:focus, textarea:focus, button:focus {
+  outline: none !important;
+}
+
+a {
+  text-decoration: none;
+  font-style: none;
+}
+
+ul, li {
+  list-style: none;
   padding: 0;
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+p {
+  font-weight: 400;
+  line-height: 28.8px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+h2 {
+  font-size: 72px;
+  font-weight: 800;
+  margin: 0;
+  line-height: 79.2px;
+}
+
+@media (max-width: 640px) {
+  h2 {
+      font-size: 40px;
+      line-height: 44px;
+      font-weight: 700;
+  }
+}
+
+.text_h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 56px;
+  font-weight: 800;
+  margin: 0;
+  line-height: 61.6px;
+}
+
+@media (max-width: 640px) {
+  h3 {
+      font-size: 32px;
+      line-height: 35.2px;
+      font-weight: 700;
+  }
+}
+
+.text_h3 {
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 400;
+}
+
+@media (max-width: 640px) {
+  .text_h3 {
+      font-size: 16px;
+      line-height: 22.4px;
+  }
+}
+
+h4 {
+  font-size: 24px;
+  font-weight: 700;
+  margin: 0;
+  line-height: 26.4px;
+}
+
+@media (max-width: 640px) {
+  h4 {
+      font-size: 20px;
+      line-height: 22px;
+      font-weight: 500;
+  }
+}
+
+.text_h4 {
+  font-size: 18px;
+  line-height: 28.8px;
+  font-size: 400;
+}
+
+@media (max-width: 640px) {
+  .text_h4 {
+      font-size: 16px;
+      line-height: 22.4px;
+  }
+}
+
+.span_title {
+  font-size: 20px;
+  font-weight: 500;
+  color: #D97706;
+}
+
+@media (max-width: 640px) {
+  .span_title {
+      font-size: 16px;
+  }
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  font-weight: 700;
+  font-size: 24px;
+  letter-spacing: .5px;
+  padding: 20px 24px;
+  cursor: pointer;
+  border-radius: 100px;
+  width: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.arrow_right {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  width: 20px !important;
+  height: 20px !important;
+  margin-left: 40px;
+  transition: all .3s;
+}
+
+.btn_yellow {
+  border: 2px solid #FCD34D;
+  color: #FCD34D;
+  transition: all .3s;
+}
+
+.btn_yellow:hover {
+  background-color: #FCD34D;
+  color: #78350F;
+  transition: all .3s;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+.btn_yellow .arrow_right {
+  background-image: url(../public/images/arrow-right-yellow.png);
+  transition: all .3s;
+}
+
+.btn_yellow:hover .arrow_right {
+  background-image: url(../public/images/arrow-right-purple.png);
+  transition: all .3s;
+}
+
+.btn_purple {
+  border: 2px solid #581C87;
+  color: #581C87;
+  transition: all .3s;
+}
+
+.btn_purple .arrow_right {
+  background-image: url(../public/images/arrow-right-purple.png);
+  transition: all .3s;
+}
+
+.btn_purple:hover {
+  background-color: #581C87;
+  color: #FCD34D;
+  transition: all .3s;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+.btn_purple:hover .arrow_right {
+  background-image: url(../public/images/arrow-right-yellow.png);
+  transition: all .3s;
+}
+
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 1536px) {
+  .container {
+      max-width: 1536px;
+  }
+}
+
+@media (max-width: 1280px) {
+  .container {
+      max-width: 1280px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+      max-width: 1024px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+      max-width: 768px;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+      max-width: 640px;
+  }
+
+  body::-webkit-scrollbar {
+    width: 0px;
   }
 }
